[package]
name = "alexa-my-investing-briefings"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
serde = "1.0.136"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "^0.8", features = ["v4"] }
